--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -5,7 +5,7 @@
 
 {% block content %}
     <div class="row-fluid">
-        <div class="span12">
+        <div class="col-lg-12">
             <p>
                 {{ status_code }} - {{ status_text }}
             </p>
