--- a/src/PMT/WebBundle/Resources/views/Dashboard/dashboard.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Dashboard/dashboard.html.twig
@@ -6,23 +6,23 @@
 {% block content_actions %}
     <ul class="actions nav nav-pills pull-right">
         <li class="active">
-            <a href="{{ path('pmtweb_issue_form') }}"><i class="icon-edit icon-plus"></i> {{ 'issue.link.create'|trans }}</a>
+            <a href="{{ path('pmtweb_issue_form') }}"><span class="glyphicon glyphicon-plus"></span> {{ 'issue.link.create'|trans }}</a>
         </li>
         <li>
-            <a href="#"><i class="icon-edit icon-plus"></i> Add gadgets</a>
+            <a href="#"><span class="glyphicon glyphicon-plus"></span> Add gadgets</a>
         </li>
         <li>
-            <a href="#"><i class="icon-edit"></i> Edit layout</a>
+            <a href="#"><span class="glyphicon glyphicon-edit"></span> Edit layout</a>
         </li>
         <li>
-            <a href="#"><i class="icon-wrench"></i> Settings</a>
+            <a href="#"><span class="glyphicon glyphicon-wrench"></span> Settings</a>
         </li>
     </ul>
 {% endblock %}
 
 {% block content %}
-    <div class="row-fluid">
-        <div class="span6">
+    <div class="row">
+        <div class="col-lg-6">
             <div class="accordion">
                 <div class="accordion-group">
                     <div class="accordion-heading">
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-        <div class="span6">
+        <div class="col-lg-6">
             <div class="accordion">
                 <div class="accordion-group">
                     <div class="accordion-heading">
