--- a/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/form.html.twig
@@ -9,52 +9,35 @@
     <form action="{{ path('pmtweb_issue_form') }}" method="post" {{ form_enctype(form) }}>
 
         {{ form_errors(form) }}
-        <div class="row-fluid">
-            <div class="span8">
+        <div class="row">
+            <div class="col-lg-8">
                 <div class="accordion">
                     <div class="accordion-group">
                         <div class="accordion-heading">
-                            <a class="accordion-toggle" data-toggle="collapse" href="#accordion_details">
+                            <a class="accordion-toggle">
                                 {{ 'issue.details'|trans }}
                             </a>
                         </div>
-                        <div id="accordion_details" class="accordion-body collapse in">
+                        <div id="accordion_details" class="accordion-body in">
                             <div class="accordion-inner">
-
-                                <div class="control-group">
-                                    <div class="control-label">
-                                        {{ form_label(form.summary) }}
-                                    </div>
-
-                                    <div class="controls row-fluid">
-                                        {{ form_widget(form.summary, {'attr': {'class': 'span12' }}) }}
-                                    </div>
+                                <div class="form-group">
+                                    {{ form_label(form.summary) }}
+                                    {{ form_widget(form.summary, {'attr': {'class': 'form-control' }}) }}
                                 </div>
-                                <div class="control-group">
-                                    <div class="control-label">
-                                        {{ form_label(form.description) }}
-                                    </div>
-
-                                    <div class="controls row-fluid">
-                                        {{ form_widget(form.description, {'attr': {'class': 'span12', 'rows': '10' }}) }}
-                                    </div>
+                                <div class="form-group">
+                                    {{ form_label(form.description) }}
+                                    {{ form_widget(form.description, {'attr': {'class': 'form-control', 'rows': '10' }}) }}
                                 </div>
-
-                                <div class="control-group">
-                                    <div class="control-label">
-                                        {{ form_label(form.tags) }}
-                                    </div>
-
-                                    <div class="controls row-fluid">
-                                        {{ form_widget(form.tags, {'attr': {'class': 'span12'}}) }}
-                                    </div>
+                                <div class="form-group">
+                                    {{ form_label(form.tags) }}
+                                    {{ form_widget(form.tags, {'attr': {'class': 'form-control' }}) }}
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="span4">
+            <div class="col-lg-4">
                 <div class="accordion">
                     <div class="accordion-group">
                         <div class="accordion-heading">
@@ -64,37 +47,21 @@
                         </div>
                         <div id="accordion_meta" class="accordion-body collapse in">
                             <div class="accordion-inner">
-                                <div class="control-group">
-                                    <div class="control-label">
-                                        {{ form_label(form.project) }}
-                                    </div>
-                                    <div class="controls row-fluid">
-                                        {{ form_widget(form.project, {'attr': {'class': 'span12' }}) }}
-                                    </div>
+                                <div class="form-group">
+                                    {{ form_label(form.project) }}
+                                    {{ form_widget(form.project, {'attr': {'class': 'form-control' }}) }}
                                 </div>
-                                <div class="control-group">
-                                    <div class="control-label">
-                                        {{ form_label(form.milestone) }}
-                                    </div>
-                                    <div class="controls row-fluid">
-                                        {{ form_widget(form.milestone, {'attr': {'class': 'span12' }}) }}
-                                    </div>
+                                <div class="form-group">
+                                    {{ form_label(form.milestone) }}
+                                    {{ form_widget(form.milestone, {'attr': {'class': 'form-control' }}) }}
                                 </div>
-                                <div class="control-group">
-                                    <div class="control-label">
-                                        {{ form_label(form.type) }}
-                                    </div>
-                                    <div class="controls row-fluid">
-                                        {{ form_widget(form.type, {'attr': {'class': 'span12' }}) }}
-                                    </div>
+                                <div class="form-group">
+                                    {{ form_label(form.type) }}
+                                    {{ form_widget(form.type, {'attr': {'class': 'form-control' }}) }}
                                 </div>
-                                <div class="control-group">
-                                    <div class="control-label">
-                                        {{ form_label(form.priority) }}
-                                    </div>
-                                    <div class="controls row-fluid">
-                                        {{ form_widget(form.priority, {'attr': {'class': 'span12' }}) }}
-                                    </div>
+                                <div class="form-group">
+                                    {{ form_label(form.priority) }}
+                                    {{ form_widget(form.priority, {'attr': {'class': 'form-control' }}) }}
                                 </div>
                             </div>
                         </div>
@@ -109,13 +76,9 @@
                         </div>
                         <div id="accordion_people" class="accordion-body collapse in">
                             <div class="accordion-inner">
-                                <div class="control-group">
-                                    <div class="control-label">
-                                        {{ form_label(form.creator) }}
-                                    </div>
-                                    <div class="controls row-fluid">
-                                        {{ form_widget(form.creator, {'attr': {'class': 'span12' }}) }}
-                                    </div>
+                                <div class="form-group">
+                                    {{ form_label(form.creator) }}
+                                    {{ form_widget(form.creator, {'attr': {'class': 'form-control' }}) }}
                                 </div>
                             </div>
                         </div>
@@ -125,22 +88,17 @@
 
             </div>
         </div>
-        <div class="row-fluid">
-            <div class="span12">
+        <div class="row">
+            <div class="col-lg-12">
                 <div class="form-actions">
                     <div class="form-horizontal">
                         <div class="pull-right">
                             <button type="submit" name="_submit" class="btn btn-primary">{{ 'issue.form.create'|trans }}</button>
                             <button type="button" class="btn" onclick="window.history.back();">{{ 'issue.form.cancel'|trans }}</button>
                         </div>
-                        <div class="control-group">
-                            <div class="control-label">
-                                {{ form_label(form.rebuild) }}
-                            </div>
-
-                            <div class="controls">
-                                {{ form_widget(form.rebuild) }}
-                            </div>
+                        <div class="form-group">
+                            {{ form_label(form.rebuild) }}
+                            {{ form_widget(form.rebuild) }}
                         </div>
                     </div>
                 </div>
