--- a/src/PMT/WebBundle/Resources/views/Menu/primary.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Menu/primary.html.twig
@@ -1,13 +1,13 @@
 {% trans_default_domain 'PMTWebBundle' %}
 
-<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+<button data-target=".nav-collapse" data-toggle="collapse" class="navbar-toggle" type="button">
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
 </button>
-<a class="brand" href="{{ path('pmtweb_dashboard') }}">PMT</a>
+<a href="{{ path('pmtweb_dashboard') }}" class="navbar-brand">PMT</a>
 <div class="nav-collapse collapse">
-    <ul class="nav pull-right">
+    <ul class="nav navbar-nav pull-right">
         <li class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">{{ app.user.username }} <b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -18,7 +18,7 @@
             </ul>
         </li>
     </ul>
-    <ul class="nav">
+    <ul class="nav navbar-nav">
         <li{% if app.request.attributes.get('_route') == 'pmtweb_dashboard' %} class="active"{% endif %}><a href="{{ path('pmtweb_dashboard') }}">{{ 'dashboard.dashboard'|trans }}</a></li>
         <li{% if app.request.attributes.get('_route') == 'pmtweb_issue_navigator' %} class="active"{% endif %}><a href="{{ path('pmtweb_issue_navigator') }}">{{ 'issue.issues'|trans }}</a></li>
         <li class="dropdown">
