--- a/src/PMT/WebBundle/Resources/views/Project/createForm.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/createForm.html.twig
@@ -7,9 +7,9 @@
 
 {% block content %}
     <form action="{{ path('pmtweb_project_form') }}" method="post" {{ form_enctype(form) }}>
-        <div class="row-fluid">
+        <div class="row">
             {{ form_errors(form) }}
-            <div class="span8">
+            <div class="col-lg-8">
                 <div class="accordion">
                     <div class="accordion-group">
                         <div class="accordion-heading">
@@ -19,40 +19,24 @@
                         </div>
                         <div id="accordion_details" class="accordion-body collapse in">
                             <div class="accordion-inner">
-
-                                <div class="control-group">
-                                    <div class="control-label">
-                                        {{ form_label(form.name) }}
-                                    </div>
-
-                                    <div class="controls row-fluid">
-                                        {{ form_widget(form.name, {'attr': {'class': 'span12' }}) }}
-                                    </div>
+                                <div class="form-group">
+                                    {{ form_label(form.name) }}
+                                    {{ form_widget(form.name, {'attr': {'class': 'form-control' }}) }}
                                 </div>
-                                <div class="control-group">
-                                    <div class="control-label">
-                                        {{ form_label(form.code) }}
-                                    </div>
-
-                                    <div class="controls row-fluid">
-                                        {{ form_widget(form.code, {'attr': {'class': 'span12' }}) }}
-                                    </div>
+                                <div class="form-group">
+                                    {{ form_label(form.code) }}
+                                    {{ form_widget(form.code, {'attr': {'class': 'form-control' }}) }}
                                 </div>
-                                <div class="control-group">
-                                    <div class="control-label">
-                                        {{ form_label(form.description) }}
-                                    </div>
-
-                                    <div class="controls row-fluid">
-                                        {{ form_widget(form.description, {'attr': {'class': 'span12', 'rows': '10' }}) }}
-                                    </div>
+                                <div class="form-group">
+                                    {{ form_label(form.description) }}
+                                    {{ form_widget(form.description, {'attr': {'class': 'form-control' }}) }}
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="span4">
+            <div class="col-lg-4">
                 <div class="accordion">
                     <div class="accordion-group">
                         <div class="accordion-heading">
@@ -62,13 +46,9 @@
                         </div>
                         <div id="accordion_people" class="accordion-body collapse in">
                             <div class="accordion-inner">
-                                <div class="control-group">
-                                    <div class="control-label">
-                                        {{ form_label(form.creator) }}
-                                    </div>
-                                    <div class="controls row-fluid">
-                                        {{ form_widget(form.creator, {'attr': {'class': 'span12' }}) }}
-                                    </div>
+                                <div class="form-group">
+                                    {{ form_label(form.creator) }}
+                                    {{ form_widget(form.creator, {'attr': {'class': 'form-control' }}) }}
                                 </div>
                             </div>
                         </div>
@@ -83,13 +63,9 @@
                         </div>
                         <div id="accordion_workflow" class="accordion-body collapse in">
                             <div class="accordion-inner">
-                                <div class="control-group">
-                                    <div class="control-label">
-                                        {{ form_label(form.workflow) }}
-                                    </div>
-                                    <div class="controls row-fluid">
-                                        {{ form_widget(form.workflow, {'attr': {'class': 'span12' }}) }}
-                                    </div>
+                                <div class="form-group">
+                                    {{ form_label(form.workflow) }}
+                                    {{ form_widget(form.workflow, {'attr': {'class': 'form-control' }}) }}
                                 </div>
                             </div>
                         </div>
@@ -97,8 +73,8 @@
                 </div>
             </div>
         </div>
-        <div class="row-fluid">
-            <div class="span12">
+        <div class="row">
+            <div class="col-lg-12">
                 <div class="form-actions">
                     <div class="form-horizontal">
                         <div class="pull-right">
