--- a/src/PMT/WebBundle/Resources/views/Project/editForm.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/editForm.html.twig
@@ -13,9 +13,9 @@
 {% block content %}
     <form action="{{ path('pmtweb_project_edit', {'projectCode': project.code}) }}" method="post" {{ form_enctype(form) }}>
 
-        <div class="row-fluid">
+        <div class="row">
             <div class="tabbable tabs-left">
-                <ul class="nav nav-tabs span2">
+                <ul class="nav nav-pills nav-stacked col-lg-2">
                     <li class="active">
                         <a href="#details" data-toggle="tab">Details</a>
                     </li>
@@ -31,15 +31,15 @@
                 </ul>
 
 
-                <div class="tabs-container span10">
+                <div class="tabs-container col-lg-10">
 
                     {{ form_errors(form) }}
 
                     <div class="tab-content">
 
                         <div class="tab-pane active" id="details">
-                            <div class="row-fluid">
-                                <div class="span12">
+                            <div class="row">
+                                <div class="col-lg-12">
                                     <div class="accordion">
                                         <div class="accordion-group">
                                             <div class="accordion-heading">
@@ -49,33 +49,17 @@
                                             </div>
                                             <div class="accordion-body collapse in">
                                                 <div class="accordion-inner">
-
-                                                    <div class="control-group">
-                                                        <div class="control-label">
-                                                            {{ form_label(form.name) }}
-                                                        </div>
-
-                                                        <div class="controls row-fluid">
-                                                            {{ form_widget(form.name, {'attr': {'class': 'span12' }}) }}
-                                                        </div>
+                                                    <div class="form-group">
+                                                        {{ form_label(form.name) }}
+                                                        {{ form_widget(form.name, {'attr': {'class': 'form-control' }}) }}
                                                     </div>
-                                                    <div class="control-group">
-                                                        <div class="control-label">
-                                                            {{ form_label(form.code) }}
-                                                        </div>
-
-                                                        <div class="controls row-fluid">
-                                                            {{ form_widget(form.code, {'attr': {'class': 'span12' }}) }}
-                                                        </div>
+                                                    <div class="form-group">
+                                                        {{ form_label(form.code) }}
+                                                        {{ form_widget(form.code, {'attr': {'class': 'form-control' }}) }}
                                                     </div>
-                                                    <div class="control-group">
-                                                        <div class="control-label">
-                                                            {{ form_label(form.description) }}
-                                                        </div>
-
-                                                        <div class="controls row-fluid">
-                                                            {{ form_widget(form.description, {'attr': {'class': 'span12', 'rows': '10' }}) }}
-                                                        </div>
+                                                    <div class="form-group">
+                                                        {{ form_label(form.description) }}
+                                                        {{ form_widget(form.description, {'attr': {'class': 'form-control' }}) }}
                                                     </div>
                                                 </div>
                                             </div>
@@ -86,8 +70,8 @@
                         </div>
 
                         <div class="tab-pane" id="people">
-                            <div class="row-fluid">
-                                <div class="span12">
+                            <div class="row">
+                                <div class="col-lg-12">
                                     <div class="accordion">
                                         <div class="accordion-group">
                                             <div class="accordion-heading">
@@ -97,13 +81,9 @@
                                             </div>
                                             <div class="accordion-body collapse in">
                                                 <div class="accordion-inner">
-                                                    <div class="control-group">
-                                                        <div class="control-label">
-                                                            {{ form_label(form.creator) }}
-                                                        </div>
-                                                        <div class="controls row-fluid">
-                                                            {{ form_widget(form.creator, {'attr': {'class': 'span12' }}) }}
-                                                        </div>
+                                                    <div class="form-group">
+                                                        {{ form_label(form.creator) }}
+                                                        {{ form_widget(form.creator, {'attr': {'class': 'form-control' }}) }}
                                                     </div>
                                                 </div>
                                             </div>
@@ -114,8 +94,8 @@
                         </div>
 
                         <div class="tab-pane" id="workflow">
-                            <div class="row-fluid">
-                                <div class="span12">
+                            <div class="row">
+                                <div class="col-lg-12">
                                     <div class="accordion">
                                         <div class="accordion-group">
                                             <div class="accordion-heading">
@@ -125,13 +105,9 @@
                                             </div>
                                             <div class="accordion-body collapse in">
                                                 <div class="accordion-inner">
-                                                    <div class="control-group">
-                                                        <div class="control-label">
-                                                            {{ form_label(form.workflow) }}
-                                                        </div>
-                                                        <div class="controls row-fluid">
-                                                            {{ form_widget(form.workflow, {'attr': {'class': 'span12' }}) }}
-                                                        </div>
+                                                    <div class="form-group">
+                                                        {{ form_label(form.workflow) }}
+                                                        {{ form_widget(form.workflow, {'attr': {'class': 'form-control' }}) }}
                                                     </div>
                                                 </div>
                                             </div>
@@ -142,8 +118,8 @@
                         </div>
 
                         <div class="tab-pane" id="milestones">
-                            <div class="row-fluid">
-                                <div class="span12">
+                            <div class="row">
+                                <div class="col-lg-12">
                                     <div class="accordion">
                                         <div class="accordion-group">
                                             <div class="accordion-heading">
@@ -153,16 +129,16 @@
                                             </div>
                                             <div class="accordion-body collapse in">
                                                 <div class="accordion-inner">
-                                                    <ul class="unstyled milestones">
+                                                    <ul class="list-unstyled milestones">
                                                         {% for milestone in form.milestones %}
-                                                            <li class="row-fluid">
-                                                                <div class="span5">
+                                                            <li class="row">
+                                                                <div class="col-lg-5">
                                                                     {{ form_row(milestone.name) }}
                                                                 </div>
-                                                                <div class="span5">
+                                                                <div class="col-lg-5">
                                                                     {{ form_row(milestone.dueDate) }}
                                                                 </div>
-                                                                <div class="span2 actions"></div>
+                                                                <div class="col-lg-2 actions"></div>
                                                             </li>
                                                         {% endfor %}
                                                     </ul>
@@ -179,8 +155,8 @@
 
             </div>
         </div>
-        <div class="row-fluid">
-            <div class="span12">
+        <div class="row">
+            <div class="col-lg-12">
                 <div class="form-actions">
                     <div class="form-horizontal">
                         <div class="pull-right">
@@ -202,13 +178,13 @@
             addMilestoneFormDeleteLink($(this));
         });
 
-        var formTemplate = '<div class="span5">'
+        var formTemplate = '<div class="col-lg-5">'
                 + '<label for="project_edit_milestones_2_name" class="required">Name</label><input type="text" id="project_edit_milestones_2_name" name="project_edit[milestones][2][name]" required="required" />'
                 + '</div>'
-                + '<div class="span5">'
+                + '<div class="col-lg-5">'
                 + '<label for="project_edit_milestones_2_dueDate">Due date</label><input type="date" id="project_edit_milestones_2_dueDate" name="project_edit[milestones][2][dueDate]" />'
                 + '</div>'
-                + '<div class="span2 actions"></div>';
+                + '<div class="col-lg-2 actions"></div>';
         var $addMilestoneLink = $('<a href="#" class="add_milestone_link">Add a milestone</a>');
         var $newLinkLi = $('<li></li>').append($addMilestoneLink);
 
@@ -218,7 +194,7 @@
 
             collectionHolder.data('index', index + 1);
 
-            var $newFormLi = $('<li class="row-fluid"></li>').append(newForm);
+            var $newFormLi = $('<li class="row"></li>').append(newForm);
             $newLinkLi.before($newFormLi);
             addMilestoneFormDeleteLink($newFormLi);
 
@@ -228,7 +204,7 @@
         }
 
         function addMilestoneFormDeleteLink($milestoneFormLi) {
-            var $removeFormA = $('<a href="#"><i class="icon icon-remove" title="delete this milestone"></a>');
+            var $removeFormA = $('<a href="#"><i class="glyphicon glyphicon-remove" title="delete this milestone"></a>');
             $milestoneFormLi.find('div.actions').append($removeFormA);
 
             $removeFormA.on('click', function(e) {
