--- a/src/PMT/WebBundle/Resources/views/Project/milestones.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/milestones.html.twig
@@ -1,8 +1,8 @@
 {% extends "PMTWebBundle:Project:layout.html.twig" %}
 
 {% block tabContent %}
-    <div class="row-fluid">
-        <div class="span12">
+    <div class="row">
+        <div class="col-lg-12">
             <div class="accordion">
                 <div class="accordion-group">
                     <div class="accordion-heading">
