--- a/src/PMT/WebBundle/Resources/views/Project/summary.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/summary.html.twig
@@ -2,8 +2,8 @@
 {% trans_default_domain 'PMTWebBundle' %}
 
 {% block tabContent %}
-    <div class="row-fluid">
-        <div class="span6">
+    <div class="row">
+        <div class="col-lg-6">
             <div class="accordion">
                 <div class="accordion-group">
                     <div class="accordion-heading">
@@ -33,7 +33,7 @@
                 </div>
             </div>
         </div>
-        <div class="span6">
+        <div class="col-lg-6">
             <div class="accordion">
                 <div class="accordion-group">
                     <div class="accordion-heading">
