--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -16,21 +16,27 @@
 
     {% include 'PMTWebBundle:Form:errors.html.twig' with {'errors': form.vars.errors, 'type': 'error'} %}
 
-    {{ form_label(form.username) }}
-    {{ form_widget(form.username, { 'attr': {'class': 'input-block-level'} }) }}
-
-    {{ form_label(form.email) }}
-    {{ form_widget(form.email, { 'attr': {'class': 'input-block-level'} }) }}
-
-    {{ form_label(form.plainPassword.first) }}
-    {{ form_widget(form.plainPassword.first, { 'attr': {'class': 'input-block-level'} }) }}
-
-    {{ form_label(form.plainPassword.second) }}
-    {{ form_widget(form.plainPassword.second, { 'attr': {'class': 'input-block-level'} }) }}
+    <div class="form-group">
+        {{ form_label(form.username) }}
+        {{ form_widget(form.username, { 'attr': {'class': 'form-control'} }) }}
+    </div>
+    <div class="form-group">
+        {{ form_label(form.email) }}
+        {{ form_widget(form.email, { 'attr': {'class': 'form-control'} }) }}
+    </div>
+    <div class="form-group">
+        {{ form_label(form.plainPassword.first) }}
+        {{ form_widget(form.plainPassword.first, { 'attr': {'class': 'form-control'} }) }}
+    </div>
+    <div class="form-group">
+        {{ form_label(form.plainPassword.second) }}
+        {{ form_widget(form.plainPassword.second, { 'attr': {'class': 'form-control'} }) }}
+    </div>
 
     {{ form_rest(form) }}
+
     <div>
-        <a class="btn btn-large btn-link pull-right" href="{{ path('pmtweb_dashboard') }}">Back</a>
-        <input type="submit" value="{{ 'registration.submit'|trans }}" class="btn btn-large btn-primary"/>
+        <a class="btn btn-link pull-right" href="{{ path('pmtweb_dashboard') }}">Back</a>
+        <input type="submit" value="{{ 'registration.submit'|trans }}" class="btn btn-primary"/>
     </div>
 </form>
