--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -18,22 +18,26 @@
 
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
 
-                <input type="text" id="username" name="_username" value="{{ last_username }}" required="required"
-                       class="input-block-level" placeholder="{{ 'security.login.username'|trans }}"/>
+                <div class="form-group">
+                    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" class="form-control" placeholder="{{ 'security.login.username'|trans }}"/>
+                </div>
 
-                <input type="password" id="password" name="_password" required="required"
-                       class="input-block-level" placeholder="{{ 'security.login.password'|trans }}"/>
+                <div class="form-group">
+                    <input type="password" id="password" name="_password" required="required" class="form-control" placeholder="{{ 'security.login.password'|trans }}"/>
+                </div>
 
-                <label for="remember_me" class="checkbox">
-                    <input type="checkbox" id="remember_me" name="_remember_me"
-                           value="on"/> {{ 'security.login.remember_me'|trans }}
-                </label>
+                <div class="form-group">
+                    <label for="remember_me" class="checkbox">
+                        <input type="checkbox" id="remember_me" name="_remember_me" value="on"/> {{ 'security.login.remember_me'|trans }}
+                    </label>
+                </div>
 
                 <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}"
-                       class="btn btn-large btn-primary"/>
+                       class="btn btn-large btn-primary btn-block"/>
             </form>
+
             <div class="signin-extra">
-                <ul>
+                <ul class="list-unstyled">
                     <li><a href="{{ path("fos_user_registration_register") }}" title="Don't have an account yet?">
                             Don't have an account yet?</a></li>
                     <li>
